# openbot

./: .bazelrc  .gitignore  .readthedocs.yaml  CHANGELOG.rst  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  openbot-config.cmake.in  openbot.sh  package.xml
openbot/bridge/: CMakeLists.txt  bridge_server.cc  bridge_server.hpp  bridge_server_main.cc
openbot/bridge/common/: bridge_buffer.cc  bridge_buffer.hpp  bridge_buffer_test.cc  bridge_gflags.cc  bridge_gflags.hpp  bridge_header.cc  bridge_header.hpp  bridge_header_item.hpp  bridge_proto_diser_buf_factory.hpp  bridge_proto_diserialized_buf.hpp  bridge_proto_serialized_buf.hpp  macro.hpp  udp_listener.hpp  util.cc  util.hpp
openbot/bridge/common/grpc/: grpc_client.cc  grpc_client.hpp  grpc_client_main.cc  grpc_client_test.cc  grpc_server_main.cc  grpc_server_test.cc  grpc_service.cc  grpc_service.hpp
openbot/bridge/common/http/: websocket_client.cc  websocket_client.hpp
openbot/bridge/common/mqtt/: mqtt_client.cc  mqtt_client.hpp
openbot/bridge/components/: grpc_component.cc  grpc_component.hpp  udp_bridge_multi_receiver_component.cc  udp_bridge_multi_receiver_component.hpp  udp_bridge_receiver_component.cc  udp_bridge_receiver_component.hpp  udp_bridge_sender_component.cc  udp_bridge_sender_component.hpp  udp_bridge_sender_component.hpp1  websocket_component.cc  websocket_component.hpp
openbot/bridge/compontents/: grpc_component.cc  grpc_component.hpp
openbot/bridge/conf/: grpc.pb.txt  websocket.pb.txt
openbot/bridge/dag/: grpc.dag  websocket.dag
openbot/bridge/grpc/: client_opitons.cc  client_opitons.hpp  grpc_client.cc  grpc_service.cc  service_opitons.cc
openbot/bridge/launch/: grpc_bridge.launch  websocket_bridge.launch
openbot/bridge/proto/: common_msgs.proto  geometry_msgs.proto  grpc_opionts.proto  gui_service.proto  http_options.proto  mapping_msgs.proto  mqtt_options.proto  perception_msgs.proto  planning_msgs.proto  robot_service.proto  ros_service.proto  sensor_msgs.proto  system_msgs.proto  task_msgs.proto  udp_bridge_remote_info.proto
openbot/control/: CMakeLists.txt  controller.hpp  controller_server.cc  controller_server.hpp
openbot/control/common/: controller_base.cc  controller_base.hpp  goal_checker_base.hpp
openbot/control/components/: controller_component.cc  controller_component.hpp
openbot/control/motion/: config.cc  config.hpp  motion_common.cc  motion_common.hpp  trajectory_common.cc  trajectory_common.hpp
openbot/control/plugins/: dwa_controller.cc  dwa_controller.hpp
openbot/control/plugins/dwa_cotroller/: dwa_controller.cc  dwa_controller.hpp
openbot/control/plugins/mpc_controller/: config.hpp  mpc_controller.cc  mpc_controller.hpp
openbot/control/plugins/pure_pursuit/: config.cc  config.hpp  pure_pursuit.cc  pure_pursuit.hpp  pure_pursuit_test.cpp
openbot/control/proto/: local_planner.proto  trajectory.proto
openbot/control/utils/: geometry_utils.hpp  line_iterator.hpp  odometry_utils.cc  odometry_utils.hpp
openbot/drivers/: BUILD  CMakeLists.txt
openbot/drivers/components/: camera_component.cc  camera_component.hpp
openbot/drivers/conf/: camera.pb.txt
openbot/drivers/dag/: drivers.dag
openbot/drivers/launch/: drivers.launch
openbot/drivers/proto/: camera_config.proto
openbot/drivers/sensor/: collator.cc  collator_interface.hpp  compressed_point_cloud.cc  dispatchable.hpp  fixed_frame_pose_data.cc  image_data.cc  imu_data.cc  landmark_data.cc  odometry_data.cc  odometry_data.hpp  ordered_multi_queue.cc  point_cloud.cc  range_data.cc  timed_point_cloud_data.cc
openbot/drivers/sensor/camera/: usb_cam.cc  usb_cam.hpp
openbot/drivers/sensor/common/: collator.cc  collator.hpp  collator_interface.hpp  compressed_point_cloud.cc  data.hpp  dispatchable.hpp  fixed_frame_pose_data.cc  fixed_frame_pose_data.hpp  image_data.cc  imu_data.cc  imu_data.hpp  landmark_data.cc  landmark_data.hpp  odometry_data.cc  odometry_data.hpp  ordered_multi_queue.cc  ordered_multi_queue.hpp  point_cloud.cc  point_cloud.hpp  range_data.cc  range_data.hpp  timed_point_cloud_data.cc  timed_point_cloud_data.hpp
openbot/localization/: CMakeLists.txt
openbot/localization/components/: map_builder_compontent.cc  map_builder_compontent.hpp
openbot/localization/proto/: frame.proto
openbot/system/navigation/: CMakeLists.txt  navigation_main.cc  navigator.cc  navigator.hpp  navigator_app_main.cc
openbot/system/navigation/behavior_tree/: behavior_tree_engine.cc  behavior_tree_engine.hpp  behavior_tree_engine_test.cc  bt_action_node.hpp  bt_action_server.hpp  bt_action_server_impl.hpp  bt_cancel_action_node.hpp  bt_conversions.hpp  bt_service_node.hpp
openbot/system/navigation/common/: geometry_utils.hpp  library_config.cc  library_config.hpp  navigator.hpp  odometry_utils.cc  odometry_utils.hpp
openbot/system/navigation/components/: bt_navigator_compontent.cc  bt_navigator_compontent.hpp  navigate_through_poses_compontent.cc  navigate_through_poses_compontent.hpp  navigate_to_pose_compontent.cc  navigate_to_pose_compontent.hpp
openbot/system/navigation/conf/: bt_navigator.pb.txt
openbot/system/navigation/dag/: bt_navigator.dag  navigator.dag
openbot/system/navigation/launch/: bt_navigator.launch  navigator.launch
openbot/system/navigation/naviagtor/: bt_navigator.cc  bt_navigator.hpp  navigate_through_poses.cc  navigate_through_poses.hpp  navigate_to_pose.cc  navigate_to_pose.hpp  navigate_to_pose_client_main.cc  navigator.hpp
openbot/system/navigation/proto/: Is_path_valid.proto  action_command.proto  assisted_teleop.proto  back_up.proto  bt_navigator.proto  clear_costmap_around_robot.proto  clear_costmap_except_region.proto  clear_entire_costmap.proto  compute_path_through_poses.proto  compute_path_to_pose.proto  drive_on_heading.proto  get_costs.proto  (+16 more)
openbot/system/slam/: CMakeLists.txt  slam_app_main.cc  slam_main.cc
openbot/tools/foxglove_bridge/: CMakeLists.txt  foxglove_server.cc  foxglove_server.hpp  foxglove_view.cc  foxglove_view.hpp  main.cc
openbot/tools/ros_bridge/: CMakeLists.txt  ros_bridge.cc
openbot/tools/visualizer/: CMakeLists.txt
(+1021 files in other folders)
